Started working on the javascript part and got the data for the visitor user

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <div class="name-container">
         <div class="visitorImg">
-            <img src="https://randomuser.me/api/portraits/men/78.jpg" alt="">
+            
         </div>
-        <h1>Heyy Name</h1>
+        <h1></h1>
     </div>
 
     <div class="search">
@@ -23,7 +23,7 @@
         <input type="button" value="Search" class="searchButton">
     </div>
     <div class="cards">
-        <div class="card">
+        <!--<div class="card">
             <div class="cardImg">
                 <img src="https://randomuser.me/api/portraits/men/36.jpg" alt="">
             </div>
@@ -102,8 +102,21 @@
                 <h2>email</h2>
                 <p>I am From State</p>
             </div>
-        </div>
+        </div>-->
     </div>
+
+    <template data-card-template>
+        <div class="card">
+            <div class="cardImg">
+                <img src="https://randomuser.me/api/portraits/men/36.jpg" alt="">
+            </div>
+            <div class="cardContent">
+                <h1></h1>
+                <h2></h2>
+                <p></p>
+            </div>
+        </div>
+    </template>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="script.js"></script>
 </body>
