Displaying the data of users using cards for the number of users entered by the new user

--- a/index.html
+++ b/index.html
@@ -22,98 +22,20 @@
         <input type="text" name="number" placeholder="Enter Number of Search" class="searchBar" autocomplete="off">
         <input type="button" value="Search" class="searchButton">
     </div>
-    <div class="cards">
-        <!--<div class="card">
-            <div class="cardImg">
-                <img src="https://randomuser.me/api/portraits/men/36.jpg" alt="">
-            </div>
-            <div class="cardContent">
-                <h1>Mr Name</h1>
-                <h2>email</h2>
-                <p>I am From State</p>
-            </div>
-        </div>
-        <div class="card">
-            <div class="cardImg">
-                <img src="https://randomuser.me/api/portraits/men/36.jpg" alt="">
-            </div>
-            <div class="cardContent">
-                <h1>Mr Name</h1>
-                <h2>email</h2>
-                <p>I am From State</p>
-            </div>
-        </div>
-        <div class="card">
-            <div class="cardImg">
-                <img src="https://randomuser.me/api/portraits/men/36.jpg" alt="">
-            </div>
-            <div class="cardContent">
-                <h1>Mr Name</h1>
-                <h2>email</h2>
-                <p>I am From State</p>
-            </div>
-        </div>
-        <div class="card">
-            <div class="cardImg">
-                <img src="https://randomuser.me/api/portraits/men/36.jpg" alt="">
-            </div>
-            <div class="cardContent">
-                <h1>Mr Name</h1>
-                <h2>email</h2>
-                <p>I am From State</p>
-            </div>
-        </div>
-        <div class="card">
-            <div class="cardImg">
-                <img src="https://randomuser.me/api/portraits/men/36.jpg" alt="">
-            </div>
-            <div class="cardContent">
-                <h1>Mr Name</h1>
-                <h2>email</h2>
-                <p>I am From State</p>
-            </div>
-        </div>
-        <div class="card">
-            <div class="cardImg">
-                <img src="https://randomuser.me/api/portraits/men/36.jpg" alt="">
-            </div>
-            <div class="cardContent">
-                <h1>Mr Name</h1>
-                <h2>email</h2>
-                <p>I am From State</p>
-            </div>
-        </div>
-        <div class="card">
-            <div class="cardImg">
-                <img src="https://randomuser.me/api/portraits/men/36.jpg" alt="">
-            </div>
-            <div class="cardContent">
-                <h1>Mr Name</h1>
-                <h2>email</h2>
-                <p>I am From State</p>
-            </div>
-        </div>
-        <div class="card">
-            <div class="cardImg">
-                <img src="https://randomuser.me/api/portraits/men/36.jpg" alt="">
-            </div>
-            <div class="cardContent">
-                <h1>Mr Name</h1>
-                <h2>email</h2>
-                <p>I am From State</p>
-            </div>
-        </div>-->
+    <input type="button" value="Search" class="shBtn">
+    <div class="cards" data-card-container>
     </div>
 
     <template data-card-template>
         <div class="card">
             <div class="cardImg">
-                <img src="https://randomuser.me/api/portraits/men/36.jpg" alt="">
+                <img src="https://randomuser.me/api/portraits/men/36.jpg" alt="" data-img>
             </div>
             <div class="cardContent">
-                <h1></h1>
-                <h2></h2>
-                <p></p>
+                <h1 data-name></h1>
+                <p data-location></p>
+                <p data-mail class="cardMail"></p>
+                
             </div>
         </div>
     </template>
