Added sorting feature by/for the data name

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
         <input type="text" name="number" placeholder="Enter Number of Search" class="searchBar" autocomplete="off">
         <input type="button" value="Search" class="searchButton">
     </div>
-    <input type="button" value="Search" class="shBtn">
+
+    <div class="short-btns">
+        <input type="button" value="Search" class="shBtn">
+    </div>
     <div class="cards" data-card-container>
     </div>
 
