Added filters according to the name and email IDs and tried my best

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
     </div>
 
     <div class="short-btns">
-        <input type="button" value="Search" class="shBtn">
+        <input type="button" value="Short By Name A to Z" class="searchButton shBtn">
+        <input type="button" value="Short By Name Z to A" class="searchButton shZBtn">
+        <input type="button" value="Short By Mail A to Z" class="searchButton mailshBtn">
+        <input type="button" value="Short By Mail Z to A" class="searchButton mailshZBtn">
     </div>
     <div class="cards" data-card-container>
     </div>
